# Documentacao-Geral

./: Makefile  main.py  pyproject.toml
_build/doctrees/: environment.pickle  index.doctree
_build/doctrees/sistemas/: aws.doctree  contabo.doctree
_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  search.html  searchindex.js
_build/html/.doctrees/: environment.pickle
_build/html/.doctrees/backend/: backend.doctree  geracao_documentos.doctree
_build/html/.doctrees/frontend/: frontend.doctree
_build/html/.doctrees/outros/: database.doctree  deploy.doctree  documentation.doctree
_build/html/.doctrees/sistemas/: registrobr.doctree
_build/html/_sources/backend/: backend.md.txt  geracao_documentos.md.txt
_build/html/_sources/frontend/: frontend.md.txt
_build/html/_sources/outros/: database.md.txt  deploy.md.txt  documentation.md.txt
_build/html/_sources/sistemas/: contabo.md.txt  registrobr.md.txt
_build/html/_static/css/: custom.css
_build/html/backend/: backend.html  geracao_documentos.html
_build/html/frontend/: frontend.html
_build/html/frontend/components/: areaDeTrabalho.html  criadorCapitulos.html  login.html  (+3 more)
_build/html/outros/: database.html  deploy.html  documentation.html
_build/html/sistemas/: aws.html  contabo.html  registrobr.html
_build/latex/: guiadedesenvolvimento.aux  guiadedesenvolvimento.fdb_latexmk  guiadedesenvolvimento.fls  guiadedesenvolvimento.ilg  guiadedesenvolvimento.out  guiadedesenvolvimento.tex  guiadedesenvolvimento.toc
source/: conf.py  index.md
source/sistemas/: aws.md
(+12 files in other folders)
