[project]
name = "docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "myst-parser>=4.0.1",
    "shibuya>=2025.8.16",
    "sphinx>=8.2.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-book-theme>=1.1.4",
    "sphinxcontrib-mermaid>=1.0.0",
]

